# marblebar

./: .gitignore  CMakeLists.txt  README.md
cmake/: AutoExtern.cmake
example/: CMakeLists.txt  example.cpp
htdocs/: gui.html  index.html
htdocs/css/: marblebar.css  marblebar.less
htdocs/js/: marblebar.js  widgets.js
include/: marblebar.hpp
include/marblebar/: callbacks.hpp  config.hpp  kernel.hpp  platform.hpp  property.hpp  property_group.hpp  property_group_templates.hpp  session.hpp  view.hpp
include/marblebar/properties/: bool.hpp  button.hpp  double.hpp  float.hpp  image.hpp  int.hpp  label.hpp  list.hpp  string.hpp
include/marblebar/server/: webserver.hpp  webserver_connection.hpp
src/: kernel.cpp  property.cpp  session.cpp  test.cpp  view.cpp  webserver.cpp  webserver_connection.cpp
src/platform/osx/: platform.mm
src/platform/unix/: platform.cpp
src/platform/win/: platform.cpp
src/properties/: prop_bool.cpp  prop_button.cpp  prop_double.cpp  prop_float.cpp  prop_image.cpp  prop_int.cpp  prop_label.cpp  prop_list.cpp  prop_string.cpp
